--- a/teamcitygradle/build.gradle
+++ b/teamcitygradle/build.gradle
@@ -4,7 +4,7 @@ task("createChangelog") {
 
     doLast {
         def teamCityURL = "https://teamcity.minecraftforge.net/"
-        def file = new FileOutputStream("build/changelog.txt")
+        def file = new FileOutputStream("changelog.txt")
         def out = new BufferedOutputStream(file)
         def changesXML = new XmlSlurper().parse(teamCityURL + "guestAuth/app/rest/changes?locator=build:(id:" + teamcity["teamcity.build.id"] + ")")
 
